fix z-index of main nav

--- a/sites/all/themes/pul_base/sass/components/_navigation--main.scss
+++ b/sites/all/themes/pul_base/sass/components/_navigation--main.scss
@@ -20,7 +20,7 @@
   font-family: $serif;
   height: $centered-navigation-height;
   width: 100%;
-  z-index: 9999;
+  z-index: 99; //4
   position: relative;
   overflow: visible;
   
@@ -76,7 +76,7 @@
     overflow: visible;
     padding: 0;
     width: 100%;
-    z-index: 99999;
+    z-index: 999; //5
 
     @include breakpoint ($horizontal-bar-mode) {
       display: block;
@@ -100,7 +100,7 @@
     padding-right: $centered-navigation-submenu-padding;
     text-align: right;
     width: 100%;
-    z-index: 9999;
+    z-index: 99; //4
 
     @include breakpoint($horizontal-bar-mode) {
       background: transparent;
